--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.0.0",
+    "@types/leaflet": "^1.9.21",
     "clsx": "^2.0.0",
     "firebase": "^10.0.0",
     "framer-motion": "^10.16.4",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.292.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.18.0",
     "tailwind-merge": "^2.0.0"
   },
@@ -31,6 +34,6 @@
     "prettier": "^3.1.0",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2",
-    "vite": "^5.0.0"
+    "vite": "^7.2.7"
   }
 }
