feat: Ajout des fonctionnalités de recherche, panier et backend
- Ajout de SearchPage avec recherche de recettes
- Ajout de CartPage et CartProvider pour la gestion du panier
- Ajout de LinkRecipeCard et PriceRangeSlider
- Ajout du backend avec server.ts, scraper et planner
- Intégration de la page Profile des modifications distantes
- Mise à jour des dépendances et configurations

--- a/functions/package.json
+++ b/functions/package.json
@@ -6,17 +6,29 @@
         "shell": "firebase functions:shell",
         "start": "npm run shell",
         "deploy": "firebase deploy --only functions",
-        "logs": "firebase functions:log"
+        "logs": "firebase functions:log",
+        "agent": "npx ts-node src/server.ts",
+        "seed": "npx ts-node src/scripts/seed_db.ts"
     },
     "engines": {
         "node": "18"
     },
     "main": "lib/index.js",
     "dependencies": {
+        "@google/generative-ai": "^0.1.3",
+        "@types/cors": "^2.8.19",
+        "@types/express": "^5.0.6",
+        "@types/node": "^25.0.1",
+        "axios": "^1.13.2",
+        "cheerio": "^1.1.2",
+        "cors": "^2.8.5",
+        "dotenv": "^17.2.3",
+        "express": "^5.2.1",
         "firebase-admin": "^11.8.0",
         "firebase-functions": "^4.3.1"
     },
     "devDependencies": {
+        "ts-node": "^10.9.1",
         "typescript": "^4.9.0"
     },
     "private": true
