feat: Implement RAG search with Mistral API

--- a/.gitignore
+++ b/.gitignore
@@ -134,8 +134,8 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-.env
-.envrc
+# .env
+# .envrc
 .venv
 env/
 venv/
@@ -213,12 +213,12 @@ yarn-error.log*
 pnpm-debug.log*
 
 # Build
-dist/
+# dist/
 dist-ssr/
 *.local
 
 # Editor directories and files
-.vscode/*
+# .vscode/*
 !.vscode/extensions.json
 .idea
 .DS_Store
