--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "rewrites": [
         {
             "source": "/api/(.*)",
-            "destination": "https://green-switch.onrender.com"
+            "destination": "https://green-switch.onrender.com/$1"
         }
     ]
 }
